# qwixx

./: CNAME  LICENSE  README.md  dice.html  docker-compose.yml  index.html
.github/workflows/: qwixx-backend-deploy.yml  qwixx-frontend-deploy.yml
css/: blue.css  buttons1000px.css  buttons320px.css  dice.css  green.css  main.css  penalties.css  red.css  yellow.css
js/: dice.js  main.js
qwixx.Backend/: Cargo.toml  Dockerfile  README.md  dockerfile
qwixx.Backend/src/: main.rs  state.rs
qwixx.Backend/src/models/: actions.rs  game.rs  game_board.rs  game_end_result.rs  game_store.rs  jwt.rs  mod.rs  moves.rs  user.rs
qwixx.Backend/src/qwixx/: mod.rs  score.rs  score_test.rs
qwixx.Backend/src/socket/: mod.rs  socket.rs  socket_handler.rs
qwixx.Backend/src/socket/events/: create_room.rs  end_game.rs  error.rs  join.rs  join_room.rs  mod.rs  move.rs  penalty.rs  reconnect.rs
qwixx.Backend/src/store/: game_store.rs  mod.rs  session_store.rs
qwixx.Backend/src/tests/: game_board_test.rs  mod.rs  score_test.rs
qwixx.Backend/src/utils/: code_generation.rs  jwt.rs  mod.rs
qwixx.Frontend/: .env  README.md  dockerfile  eslint.config.js  index.html  package.json
qwixx.Frontend/src/: App.tsx  constants.ts  index.css  main.tsx  vite-env.d.ts
qwixx.Frontend/src/types/: Cell.ts  Color.ts  Room.ts
qwixx.Frontend/src/types/actions/: CreateRoom.ts  EndGame.ts  JoinRoom.ts  Move.ts  Penalty.ts  RestoreBoard.ts
qwixx.Frontend/src/types/receivedEvents/: CreateRoom.ts  EndGame.ts  JoinRoom.ts  Move.ts  (+2 more)
qwixx.Frontend/src/utils/: ClassNames.ts  Color.ts
(+8 files in other folders)
