[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = { version = "0.14", features = ["state"] }
tokio = { version = "1.39", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = "0.5"
chrono = { version = "0.4", features = ["serde"] }
